--- a/public_html/css/2023.css
+++ b/public_html/css/2023.css
@@ -2,8 +2,9 @@ body {
     width: 98%;
     margin: 5px;
     background-color: #005588;
-    margin: auto;    
+    margin: auto;
 }
+
 #logo {
     display: flex;
     flex-direction: row;
@@ -25,29 +26,35 @@ details {
 header {
     margin-left: 50px;
 }
+
 nav {
     display: flex;
     flex-direction: row;
 }
+
 main {
     background-color: #bbd6ef;
-    width:100%;
+    width: 100%;
     border-radius: 50px;
 }
+
 button {
     border-radius: 50px;
 }
+
 .buttons {
     display: flex;
     flex-direction: column;
     border: white solid 4px;
     border-radius: 50px;
 }
+
 #buttonSmall {
     height: 98%;
     font-size: 1.5em;
     border-radius: 50px;
 }
+
 .specialH2 {
     text-align: center;
     /* border: 2px red solid; */
@@ -58,9 +65,10 @@ button {
 /* section display flex .containerSection is a section too! */
 
 section {
-    display:flex;
+    display: flex;
 }
-.containerSection  {
+
+.containerSection {
     flex-direction: row;
     /* justify-content: space-between; */
     justify-content: space-around;
@@ -76,9 +84,10 @@ video {
     border: 4px solid white;
 }
 
-.articlevideo, .gallery{
+.articlevideo,
+.gallery {
     border: 6px solid white;
-    padding:0.5%;
+    padding: 0.5%;
 }
 
 
@@ -87,13 +96,15 @@ video {
     background-color: #aaa;
     width: 300px;
     height: 150px;
-    padding:0.5%;
+    padding: 0.5%;
 }
+
 #paddingleftsection div {
     width: 50%;
     /* border: blue 3px solid; */
     /* justify-content: space-around; */
 }
+
 #paddingleftsection {
     display: flex;
     padding: 2%;
@@ -105,6 +116,7 @@ video {
     flex-direction: row;
     flex-wrap: wrap;
 }
+
 li:nth-child(odd) {
     background-color: aliceblue;
 }
@@ -122,6 +134,12 @@ footer {
     justify-content: center;
     font-size: 4em;
 }
+
 li:nth-child(odd) {
     background-color: aliceblue;
+}
+
+
+nav ul li:nth-child(odd) {
+    background-color: #222;
 }
